# Qt_Test

./: .gitignore  CMakeLists.txt  Main.qml  Triangle.cpp  canvasController.cpp  canvasController.h  main.cpp
Managers/CanvasManager/: CanvasManager.cpp  CanvasManager.h
Managers/QMLBridge/EditorManager/: EditorEventHandler.cpp  EditorEventHandler.h
Model/BaseWidget/: BaseWidget.cpp  BaseWidget.h
Model/Canvas/: Canvas.cpp  Canvas.h  Canvas.qml  canvas.qml
Model/QuickWidget/: QuickWidget.cpp  QuickWidget.h
Model/WebWidget/: WebWidget.cpp  WebWidget.h
Widgets/QtQuickView/Rectangle/: Rectangle.cpp  Rectangle.h  Rectangle.qml  rectangle.qml
Widgets/Rectangle/: Rectangle.cpp  Rectangle.h
canvas_control/: move_resize_widget.cpp  move_resize_widget.h
core/EditorManager/: EditorEventHandler.h
